fix menu again because it was showing by deafult on mobile and not when user clicks on it

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -149,6 +149,7 @@ body {
 }
 
 .hide--content {
+    display: block;
     @include mobile {
         display: none;
     }
